WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273071
[WGSL] shader,execution,expression,call,user,ptr_params:* is failing
https://bugs.webkit.org/show_bug.cgi?id=273071
Summary
[WGSL] shader,execution,expression,call,user,ptr_params:* is failing
Tadeu Zagallo
Reported
2024-04-22 09:29:57 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-22 09:30:11 PDT
<
rdar://problem/126865271
>
Tadeu Zagallo
Comment 2
2024-04-22 09:39:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27582
EWS
Comment 3
2024-04-23 07:51:16 PDT
Committed
277867@main
(fa0acee7fc7f): <
https://commits.webkit.org/277867@main
> Reviewed commits have been landed. Closing PR #27582 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug